# gluebot

./: README.md
gluebot_app/: CMakeLists.txt  package.xml
gluebot_app/include/gluebot_app/: util.h  visual_tools.h
gluebot_app/launch/: start_app.launch
gluebot_app/scripts/: glue_gun.py  halcon.py  halcon_client.py  halcon_server_example.py
gluebot_app/src/: gluebot_app.cpp
gluebot_demo/: CMakeLists.txt  package.xml
gluebot_demo/config/: config.yaml
gluebot_demo/include/gluebot_demo/: ur_kin.h
gluebot_demo/launch/: demo.launch
gluebot_demo/src/: demo.cpp  ur5_ik_test.cpp  ur5_kin.cpp
gluebot_gui/: gluebot_app_control.html
gluebot_gui/js/: main.js
gluebot_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
gluebot_moveit_config/config/: gluebot.srdf  ompl_planning.yaml  ros_controllers.yaml
gluebot_moveit_config/launch/: chomp_planning_pipeline.launch.xml  default_warehouse_db.launch  demo.launch  fake_moveit_controller_manager.launch.xml  gluebot_moveit_controller_manager.launch.xml  gluebot_planning_execution.launch  gluebot_special.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch.xml  planning_context.launch  planning_pipeline.launch.xml  ros_controllers.launch  run_benchmark_ompl.launch  sensor_manager.launch.xml  setup_assistant.launch  trajectory_execution.launch.xml  warehouse.launch
gluebot_support/: CMakeLists.txt  package.xml
gluebot_support/launch/: config.rviz  setup.launch  test.launch
gluebot_support/meshes/: cilinder_and_square.dae  cilinder_and_square.stl  part.stl  part2.stl  tool.stl  workcell.scene  workcell_aligned.stl  workcell_ur5_simple.stl
gluebot_support/meshes/collision/: GlueBot.dae  GlueBot3.stl  GlueBot4.stl
gluebot_support/meshes/visual/: GlueBot.stl  GlueBot2.stl  GlueBot5.stl
gluebot_support/urdf/: gluebot.xacro
